--- a/src/SampleApp.Web/Pages/Books/Index.cshtml
+++ b/src/SampleApp.Web/Pages/Books/Index.cshtml
@@ -31,6 +31,7 @@
                         <th>@L["PublishDate"]</th>
                         <th>@L["Price"]</th>
                         <th>@L["CreationTime"]</th>
+                        <th>@L["AuthorId"]</th>
                     </tr>
                 </thead>
             </abp-table>
